Fix buttons align
[MAILPOET-2493]

--- a/assets/css/src/components/_premiumPage.scss
+++ b/assets/css/src/components/_premiumPage.scss
@@ -10,6 +10,8 @@
   }
 
   .button.mailpoet-button-bigger {
+    display: inline-block;
+    line-height: normal;
     margin: 1em 0;
   }
 
